syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.linkfast.demogrpc.Driver";
option java_outer_classname = "DriverGrpcProto";

package Driver;

service DriverService {
  rpc CreateDriver (DriverRq) returns (DriverRs) {}
  rpc UpdateDriver (DriverUpdateRq) returns (DriverRs) {}
  rpc DeleteDriver (DeleteDriverRq) returns (DeleteDriverRs) {}
  rpc GetAllDriver (EmptyRq) returns (ListDriversResponse) {}
  rpc OnReceivedLocationDriver(GetPositionDriverRq) returns (stream PositionRs);
}

message DriverRq {
  string name = 1;
  string nickName = 2;
  string address = 3;
  int32 age = 4;
  bool active = 5;
  string sex = 6;
}

message DriverRs {
  string id = 1;
  string name = 2;
  string nickName = 3;
  string address = 4;
  int32 age = 5;
  bool active = 6;
  string sex = 7;
}

message DriverUpdateRq {
  string id = 1;
  string name = 2;
  string nickName = 3;
  string address = 4;
  int32 age = 5;
  bool active = 6;
  string sex = 7;
}

message DeleteDriverRq {
  string id = 1;
}

message DeleteDriverRs {
  bool complete = 1;
}

message EmptyRq {

}

message ListDriversResponse {
  repeated DriverRs Drivers = 1;
}

message GetPositionDriverRq {
  string idDriver = 1;
}

message PositionRs {
  double latitude = 1;
  double longitude = 2;
}
